# configopt

./: Cargo.toml  README.md
0_serde_config/: Cargo.toml
0_serde_config/src/: main.rs
1_partial_config/: Cargo.toml
1_partial_config/src/: main.rs
2_unified_config_no_macro/: Cargo.toml
2_unified_config_no_macro/src/: main.rs
3_unified_config_with_macro/: Cargo.toml
3_unified_config_with_macro/src/: main.rs
configopt/: Cargo.toml  README.md  test.rs
configopt-derive/: Cargo.toml  README.md
configopt-derive/src/: configopt_defaults.rs  configopt_type.rs  lib.rs  partial.rs  toml_config_generator.rs  util.rs
configopt-derive/src/configopt_type/: generate.rs  parse.rs
configopt-derive/src/configopt_type/generate/: configopt_defaults.rs  core.rs  default_config_files.rs  handle_config_files.rs  toml_config.rs  try_from_error.rs
configopt-derive/src/configopt_type/generate/core/: enum_type.rs  struct_type.rs
configopt-derive/src/configopt_type/parse/: attribute_trimmer.rs  configopt_fields_attr_parser.rs  configopt_parser.rs  serde_parser.rs  structopt_parser.rs
configopt-derive/src/util/: structopt_parser.rs
configopt/examples/: test.rs
configopt/src/: arena_trait.rs  configopt_arg_to_os_string.rs  configopt_bool.rs  configopt_defaults_trait.rs  error.rs  lib.rs
configopt/tests/: bool_followed_by_positional.rs  custom_parser_and_to_os_string.rs  custom_serde.rs  custom_structopt_parser.rs  default_config_file.rs  duration.rs  empty_enum.rs  empty_string.rs  minimal_requirements.rs  no_wrap.rs  positional_vec.rs  test_all_types.rs  test_bool.rs  tests.rs  vec_default_value.rs
parse_with_defaults_derive/: Cargo.toml
parse_with_defaults_derive/src/: lib.rs
parse_with_defaults_derive/tests/: test.rs
partial-derive/: Cargo.toml
partial-derive/src/: lib.rs
partial-derive/tests/: tests.rs
partial_derive/: Cargo.toml
partial_derive/examples/: test.rs
partial_derive/src/: lib.rs
partial_derive/tests/: test.rs
test_app/: Cargo.toml
test_app/src/: main.rs
test_app_clap_derive/: Cargo.toml
test_app_clap_derive/src/: main.rs
test_app_structopt/: Cargo.toml
test_app_structopt/src/: main.rs
ticli/: Cargo.toml
ticli/src/: lib.rs  parser.rs  tests.rs
