[package]
name = "unified_config_no_macro"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", branch = "master"}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
