[package]
name = "parse_with_defaults_derive"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", branch = "master"}
syn = "1.0.8"
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde = { version = "*", features = ["derive"] }
