[package]
name = "partial_derive"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.13"
proc-macro2 = "1.0.7"
proc_macro_roids = "0.7.0"
quote = "1.0.2"
Inflector = { version="0.11.4", default-features = false, optional = true }
configopt = { path = "../configopt", optional = true}

[dev-dependencies]
serde = { version = "*", features = ["derive"] }
structopt = "*"

[features]
default = ["configopt_default"]
configopt_default = ["Inflector", "configopt"]
