[package]
name = "test_app"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configopt = { path = "../configopt" }
partial_derive = { path = "../partial_derive", features = ["configopt"] }
structopt = "0.3.7"
